--- a/title.tex
+++ b/title.tex
@@ -3,7 +3,7 @@
         \vspace*{1cm}
             
         \Huge
-        \textbf{KOKK.AI DOC}
+        \textbf{KOKKAI DOC}
             
         \vspace{0.5cm}
         \LARGE
