--- a/main.tex
+++ b/main.tex
@@ -147,18 +147,19 @@
 \pagenumbering{arabic}
 
 \section{Introduction}
-Quantifying and scaling the political ideology of parliamentary representatives is essential for maintaining the transparency of democracy. It will give voters a more intuitive understanding of what the politicians are thinking without having to scramble through many lines of parliamentary speech records. Previously, political scientists have looked at data sources such as parliamentary voting data \citep{dw-nominate}, party manifestos \citep{CATALINAC_2018}, and more recently, parliamentary speeches.\citep{Word-embeddings-for-analysis-of-ideological-placement}.
-However, these methods either failed to conduct a granular analysis of individual politicians or were only applicable to a subset of democracies where parliamentary voting data is available to the public. Also, some previous methods scaled the targets on a simple left-right dimension which has limited applicability in most democracies where debates occur in a more complex, multi-dimensional dynamic.
+Quantifying and scaling the issue-specific stances of parliamentary representatives is essential for maintaining the transparency of democracy. It will give voters a more intuitive understanding of what the politicians are thinking without having to scramble through many lines of parliamentary speech records. Previously, political scientists have looked at data sources such as parliamentary voting data \citep{dw-nominate}, party manifestos \citep{CATALINAC_2018}, and more recently, parliamentary speeches \citep{Word-embeddings-for-analysis-of-ideological-placement}. Our method builds on these previous works and aims to provide a more flexible and reliable way to scale the stances of parliamentary representatives using advanced NLP techniques and Large Language Models(LLMs).
+% However, these methods either failed to conduct a granular analysis of individual politicians or were only applicable to a subset of democracies where parliamentary voting data is available to the public. Also, some previous methods scaled the targets on a simple left-right dimension which has limited applicability in most democracies where debates occur in a more complex, multi-dimensional dynamic.
 
-The application of LLMs in political science has recently gained significant attention in the community.(\cite{LLMs-and-political-science};\cite{kato2024lupinllmbasedpoliticalideology};\cite{llm-latent-position-of-politicians};\cite{li2024politicalllmlargelanguagemodels}) Due to the nature of the discipline relying predominantly on text data such as political speeches and legislative documents, it has been difficult for political scientists to gain insight from the vast amount of textual data available. \citep{li2024politicalllmlargelanguagemodels} However with the introduction of LLMs, political scientists were empowered to process and analyze massive amounts of text data efficiently. In the context of scaling political ideologies, the works of  \citeauthor{kato2024lupinllmbasedpoliticalideology} and \citeauthor{llm-latent-position-of-politicians} apply LLMs to scale the political ideology of parliamentary representatives but in different ways. 
+The application of LLMs in political science has recently gained significant attention in the community(\cite{LLMs-and-political-science};\cite{kato2024lupinllmbasedpoliticalideology};\cite{llm-latent-position-of-politicians};\cite{li2024politicalllmlargelanguagemodels}). Due to the nature of the discipline relying predominantly on text data such as political speeches and legislative documents, it has been difficult for political scientists to gain insight from the vast amount of textual data available \citep{li2024politicalllmlargelanguagemodels}. However with the introduction of LLMs, political scientists were empowered to process and analyze massive amounts of text data efficiently. In the context of scaling political ideologies, the works of  \citeauthor{kato2024lupinllmbasedpoliticalideology} and \citeauthor{llm-latent-position-of-politicians} apply LLMs to scale the political ideology of parliamentary representatives but in different ways. 
 
 The methods developed by \citeauthor{kato2024lupinllmbasedpoliticalideology} allow for a more flexible scaling of politicians on the axis of the researcher's choice and showed promising results in accurately estimating the ideological position of representatives. However, it also fell short in the following aspects. 1) The speeches used to embed the ideological positions of the representatives were still noisy and the parties still seemed too dispersed. 2) The manual selection of the axes of controversy by the researcher could introduce a layer of bias into the final estimation. 3) The analysis by \citeauthor{kato2024lupinllmbasedpoliticalideology} lacked any form of diachronic analysis which is essential to understand how a political system has evolved. Therefore, this research aims to extend the methods introduced by \citeauthor{kato2024lupinllmbasedpoliticalideology} in 3 major ways. 
 \begin{enumerate}
     \item \textbf{De-noising through summarization}: In their work, \citeauthor{kato2024lupinllmbasedpoliticalideology} filters the raw political speeches collected from the Japanese Diet using a BERT-based classifier. In our method, we want to summarize the filtered opinion-based sentences using an LLM and then use the embedding of these summarizations. The idea is that this will de-noise the speeches further, allowing for a more accurate latent space representation of the legislator. 
     \item \textbf{Automatic extraction of the axis of controversy}: Previous methods by \citeauthor{kato2024lupinllmbasedpoliticalideology} and \citeauthor{llm-latent-position-of-politicians} required researchers to manually choose the axis of controversy they want to place the representatives on. In the work of \citeauthor{kato2024lupinllmbasedpoliticalideology} this was the acknowledgment of JSDF in the Japanese constitution, in the work of \citeauthor{llm-latent-position-of-politicians}, this was gun-control in the US. In this work, we would like to apply LLMs to parse through the speeches of representatives and extract possible axes of controversy from the corpora. 
-    \item \textbf{Diachronic analysis of party positions on political axes}: While it is helpful to analyze the current ideological stance of representatives, examining how their position has evolved is another aspect political scientists have explored.(\cite{Debating-Evil:-Using-Word-Embeddings-to-Analyze-Parliamentary-Debates}; \cite{Word-embeddings-for-analysis-of-ideological-placement}) In this research, we have explored how the ideological stance of parties have evolved over time on the extracted political topics. 
+    \item \textbf{Diachronic analysis of party positions on political axes}: While it is helpful to analyze the current ideological stance of representatives, examining how their position has evolved is another aspect political scientists have explored(\cite{Debating-Evil:-Using-Word-Embeddings-to-Analyze-Parliamentary-Debates}; \cite{Word-embeddings-for-analysis-of-ideological-placement}). In this research, we have explored how the ideological stance of parties have evolved over time on the extracted political topics. 
 \end{enumerate}
 
+Additionally, we validate our method by quantitatively comparing it with expert predictions of ideological positions of parties and qualitatively evaluate the method by analyzing the common noun-phrases that are associated with different extracted clusters of politicians. We also conducted a diachronic analysis of the issue specific positions of the parties to show how the stances of parties evolved over time and to demonstrate that our method is able to capture the evolution of the party positions on the political axes.
 We believe that these extensions will allow for a more accurate and reliable scaling of political ideologies of parliamentary representatives with reduced human intervention and will provide a more comprehensive analysis of any political system where parliamentary speeches are available.
 
 
@@ -171,7 +172,9 @@ In this section, we present a variety of related works ranging from earlier meth
 
 The Dynamically Weighted Nominal Three-Step Estimation (DW-NOMINATE) scores developed by \citeauthor{dw-nominate} remain the benchmark for comparing the spatial orientation of the legislator ideologies until today. It is an extension of the NOMINATE score \citep{spatial-model-for-legislative-roll-call} developed by the same authors a few years earlier, and they are based on the roll call votes of the representatives. Their algorithm aims to estimate the parameters of a utility function for each representative and expresses each representative as a point on the Euclidean space. Their work laid the foundation for the spatial expression of legislator ideologies and is a gold-standard reference for political scientists today.
 
-There are, however, limitations to their approach. The method depends heavily on the availability of the roll-call votes data, which in the case of Japanese politics is only available for a limited number of bills. It also places the politicians on a left-right singular dimension which might not be appropriate for all democracies. As \citeauthor{dw-nominate} explains, in the US political system issues can be 'bundled' together. For example, a legislator who opposes gun regulation most likely is pro-life regarding abortion and likely is against affirmative action. This interpretation of politics is however not applicable to all democracies. In Japanese politics, for example, knowing that a politician is against acknowledging the Japanese Self-Defense Force(JSDF) in the Japanese constitution does not always tell you how the politician stands regarding other topics. Therefore, the DW-NOMINATE score cannot be used when seeking a more granular analysis of the political position of representatives in regards to various political topics. 
+Our method builds on this work by extending this sort of estimation beyond roll-call votes. Our method estimates the issue positions of parliamentary representatives based on their parliamentary speeches, which is more suitable for the context of Japanese politics where roll-call vote data is not as public as in the US. (Some votings happen based on stand up and sit down votes, which are not recorded in the same way as roll-call votes) Our method also allows political scientists to scale the representatives flexibly on the axes of their choice, which gives us a more granular, issue specific analysis of the positions of the representatives. 
+
+% The method depends heavily on the availability of the roll-call votes data, which in the case of Japanese politics is only available for a limited number of bills. It also places the politicians on a left-right singular dimension which might not be appropriate for all democracies. As \citeauthor{dw-nominate} explains, in the US political system issues can be 'bundled' together. For example, a legislator who opposes gun regulation most likely is pro-life regarding abortion and likely is against affirmative action. This interpretation of politics is however not applicable to all democracies. In Japanese politics, for example, knowing that a politician is against acknowledging the Japanese Self-Defense Force(JSDF) in the Japanese constitution does not always tell you how the politician stands regarding other topics. Therefore, the DW-NOMINATE score cannot be used when seeking a more granular analysis of the political position of representatives in regards to various political topics. 
 
 \subsection{Earlier methods: Word frequency based approach}
 \subsubsection{Wordscores - \citealt{LAVER_BENOIT_GARRY_2003}}
@@ -208,7 +211,7 @@ At the time of writing this paper, we are only aware of a few works that explore
 In their work, \citeauthor{Scaling-Political-Texts-with-ChatGPT} use a prompt engineering approach to spatially position British parties and US senators on a left-right scale. They feed in British party manifestos or tweets from US senators into the GPT-4 model using the API service provided by OpenAI and task the LLM to score the given text from 0 to 100 on a left-right scale. They verify that the scores they obtained using this method correlate extensively with existing expert estimates as well as past research. The authors mention the benefit of their methodology over the work of \citeauthor{llm-latent-position-of-politicians} as their method does not require the LLM to "know" the political actors to estimate their political ideological position as they are provided the tweets/manifestos of the political actors. They also attempt to make their method robust by averaging different iterations of prompting the LLMs to eliminate any variability due to the randomness in prompt responses.  
 
 \subsubsection{Representation-based methodologies}
-So far, the works introduced have mainly focused on one source of text data such as tweets, parliamentary speeches, or manifestos. \citeauthor{Understanding-Politics-via-Contextualized} extends this approach by suggesting a framework to combine political text from multiple sources. They suggest a unique neural architecture, "Compositional Reader", capable of processing multiple sources of text in one shot and successfully training it on two major tasks Authorship prediction and Referenced Entity Prediction. They show that this architecture can outperform the previous BERT-based architectures. They also show that the representations of politicians learned by the model are capable of capturing a greater depth of political context compared to previous methodologies as their representations do not simply capture the linguistic context but a broader political context. Although this method guarantees a more contextualized representation of political ideologies, one bottleneck with this method would be that it requires a lot of investment in terms of computational resources and data collection, making the methodology less accessible to political science researchers who might not have the computational resource/know-how to collect the data from the wide variety of data sources.
+So far, the works introduced have mainly focused on one source of text data such as tweets, parliamentary speeches, or manifestos \citeauthor{Understanding-Politics-via-Contextualized}. extends this approach by suggesting a framework to combine political text from multiple sources. They suggest a unique neural architecture, "Compositional Reader", capable of processing multiple sources of text in one shot and successfully training it on two major tasks Authorship prediction and Referenced Entity Prediction. They show that this architecture can outperform the previous BERT-based architectures. They also show that the representations of politicians learned by the model are capable of capturing a greater depth of political context compared to previous methodologies as their representations do not simply capture the linguistic context but a broader political context. Although this method guarantees a more contextualized representation of political ideologies, one bottleneck with this method would be that it requires a lot of investment in terms of computational resources and data collection, making the methodology less accessible to political science researchers who might not have the computational resource/know-how to collect the data from the wide variety of data sources.
 
 The work by \citeauthor{kato2024lupinllmbasedpoliticalideology} can be seen as a hybrid approach to the above-outlined methods. It uses GPT4o-mini to generate the reference speeches that are used to create an axis to project the legislators onto but does not directly use GPT4o-mini to scale the representatives like \citeauthor{Scaling-Political-Texts-with-ChatGPT} and \citeauthor{llm-latent-position-of-politicians} did. This way, the LLM does not have to "know" the representatives, which was an issue with \citeauthor{llm-latent-position-of-politicians} and it does not ask for numerical outputs from the LLM which is known to be vulnerable towards numerical reasoning tasks. Their method "de-noises" parliamentary speeches through a fine-tuned BERT-based classifier and uses the embeddings of the filtered speeches to create a representation of the legislators. These representations are projected onto an axis composed of two opposing political views which are either generated political speeches or hand-picked political figures. Using the latent representations of the legislators can be seen as a similar approach to the work of \citeauthor{Debating-Evil:-Using-Word-Embeddings-to-Analyze-Parliamentary-Debates} or \citeauthor{Word-embeddings-for-analysis-of-ideological-placement} but this method does not require training of their model and hence can be seen as a more light-weight approach. They show that their method correctly places the different party members on the political spectrum although we observe some dispersion in the parties, indicating room for improvement in their methodology. This paper aims to build on this work by improving the accuracy of the ideological scaling as well as introducing a diachronic analysis of the party positions on the political axes.
 
@@ -292,7 +295,7 @@ We used a hand-labeled dataset comprising 1,439 speech segments to fine-tune thi
 \label{fig:extracted opinion}
 \end{figure}
 
-In this research, the extracted speech segments are summarized using GPT4o-mini and then embedded using the previous BERT model using Sentence BERT(SBERT). \citep{reimers2019sentencebert} See the full data collection and embedding pipeline in figure \ref{fig:data-collection-phase}.
+In this research, the extracted speech segments are summarized using GPT4o-mini and then embedded using the previous BERT model using Sentence BERT(SBERT) \citep{reimers2019sentencebert}. See the full data collection and embedding pipeline in figure \ref{fig:data-collection-phase}.
 
 \begin{figure}[h]
 \centering
@@ -406,8 +409,7 @@ $\langle$ Statements $\rangle$ \\
 \label{tab:summary prompt styles}
 \end{table}
 
-As you can see in figure \ref{fig:UMAP prompt comparison}, with the base prompt, we have introduced a noise in some form as we now have two clusters that seemingly are unrelated to party affiliation. After some investigation, we noticed that these two clusters were formed because of the inconsistent formatting of the reply by GPT4o-mini. One cluster represented a more formatted/bulleted reply while the other cluster represented a more essay-style reply. See in appendix \ref{fig:formatted reply GPT4o-mini summary} and \ref{fig:essay reply GPT4o-mini summary} for a comparison in reply formats. To select our final prompting style to generate the summaries, we measured the average intra-party distance of ideological placement. The \textbf{base prompting} style resulted in an intra-party distance of 6.65 while the \textbf{with context} prompt. The \textbf{with context + few shot prompt} resulted in 5.50 and 5.53 respectively indicating that the latter prompting styles are more effective in generating summaries that express political ideologies more effectively; with the assumption that politicians who belong to the same party are more aligned ideologically. We see that with the latter two prompting styles, there is a clear distinction between parties such as the Japanese Communist Party(JCP) which are known to be more on the liberal side versus parties such as the Liberal Democratic Party(LDP) which are known to be more on the conservative side. 
-
+As you can see in figure \ref{fig:UMAP prompt comparison}, with the base prompt, we have introduced a noise in some form as we now have two clusters that seemingly are unrelated to party affiliation. After some investigation, we noticed that these two clusters were formed because of the inconsistent formatting of the reply by GPT4o-mini. One cluster represented a more formatted/bulleted reply while the other cluster represented a more essay-style reply. See in appendix \ref{fig:formatted reply GPT4o-mini summary} and \ref{fig:essay reply GPT4o-mini summary} for a comparison in reply formats. Therefore it was important for us to create a prompt that would provide a consistent reply format to make sure we do not add additional noise to the embeddings rather than de-noising the speeches. We found that our context + few shot prompt provided the most consistent reply format and hence we decided to use this prompt for the summarization step.
 
 \begin{figure}[h]
 \centering
